<resources>
    <string name="app_name">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="authentication">Authentication</string>
    <string name="add_post">Add post</string>
    <string name="description_post_author_avatar">Avatar name</string>
    <string name="description_post_more">More</string>
    <string name="description_liked_count">Liked count</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="notLoginText">Don\'t have an account? Register</string>
    <string name="error_blank_auth">Empty login and password fields</string>
    <string name="error_blank_job">Empty company name, position and start job fields</string>
    <string name="error_blank_username">Enter Login</string>
    <string name="error_blank_password">Enter Password</string>
    <string name="password_helper_text">Password cannot be empty</string>
    <string name="nameText">Name</string>
    <string name="error_blank_password_repeat_text">Eneter password repeat</string>
    <string name="error_blank_pass_notequals_passre">Passwords must match</string>
    <string name="error_blank_name">Enter your name</string>
    <string name="wrong_login_or_pass">Wrong login or password</string>
    <string name="user_not_found">User not found</string>
    <string name="unknown_error">Unknown_error</string>
    <string name="user_already_register">User already registered</string>
    <string name="wrong_format_media">Wrong format media</string>
    <string name="user_avatar">user avatar</string>
    <string name="user_name">User name</string>
    <string name="user_login">Nik name</string>
    <string name="description_edit">Edit</string>
    <string name="description_remove">Remove</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="add_event">Add event</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="remove">Remove</string>
    <string name="newpost">New post</string>
    <string name="new_event">New event</string>
    <string name="save">Save</string>
    <string name="error_empty_content">"The content field cannot be empty "</string>
    <string name="VideoHolder">Video holder</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="firm_name">Firm`s name</string>
    <string name="office_post_name">Office position</string>
    <string name="until_now">Until now</string>
    <string name="add_job">Add job</string>
    <string name="create_new_job">Create</string>
    <string name="text_position">Position</string>
    <string name="text_link">Link</string>
    <string name="logout">Exit</string>
    <string name="action_ok">OK</string>
    <string name="post">Post</string>
    <string name="share">Share</string>
    <string name="location_mark">Mark of location</string>
    <string name="description_mention_count">Mentioned</string>
    <string name="description_participians_count">participians</string>
    <string name="liked_more">See more likers</string>
    <string name="ment_more">See more mentioned</string>
    <string name="description_shared">Share</string>
    <string name="zoom_plus">Zoom in</string>
    <string name="zoom_minus">Zoom out</string>
    <string name="currnet_place">Current place</string>
    <string name="add_place">Add place</string>
    <string name="enter_text">Enter text</string>
    <string name="image">Image</string>
    <string name="take_image">Take image</string>
    <string name="take_media">Take video or audio</string>
    <string name="choose_mentinoed">Take mentinoed</string>
    <string name="take_location">Take location</string>
    <string name="mentinoned_label">Mentinoned</string>
    <string name="likers_label">Likers</string>
    <string name="add_date_event">Add date event</string>
    <string name="event">Event</string>
    <string name="participants_label">Participants</string>
    <string name="video_holder">Media holder</string>
    <string name="speakers_label">Speakers</string>
    <string name="take_people">Choose users</string>
    <string name="select_action">Select action</string>
    <string name="select_video">Select video</string>
    <string name="select_audio">Select audio</string>
    <string name="select_gallary">Select gallary</string>
    <string name="select_camera">Select camera</string>
    <string name="speakers_more">Speakers more</string>
    <string name="in_search_job">Search job</string>
    <string name="set_position">Set position</string>
    <string name="want_add_post">Do you want to add a post?</string>
    <string name="you_must_login">To add a post, you must be logged in.</string>
    <string name="back">Back</string>
    <string name="want_like">Do you want like?</string>
    <string name="set_like_must_login">To like a post, you must be logged in.</string>
    <string name="date">Date</string>
    <string name="date_time_format">MM/dd/yyyy HH:mm</string>
    <string name="type_event_title">Type</string>
    <string name="select_date">Select date</string>
    <string name="location_permission_required">Location permission rrequired</string>
    <string name="new_job">New job</string>
    <string name="icon_calendar">icon_calendar</string>
    <string name="drag_handler">drag_handler</string>
    <string name="enter_dates">Enter dates</string>
    <string name="select_date_time_tittle">Select date and time</string>
    <string name="enter_date_time">Enter date and time</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time">Time</string>
    <string name="time_format">hh:mm</string>
    <string name="end_date">End date</string>
    <string name="tire">" - "</string>
    <string name="without_date">without date</string>

</resources>